--- a/pf0670/revisao.html
+++ b/pf0670/revisao.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Manipulação de Arrays</title>
+    <script src = "./js/script.js"></script>
 </head>
 <body>
     
+    <h1>Exempços de Arrays e seus métodos</h1>
+
+
+
 </body>
 </html>
