--- a/pf0670/revisao.html
+++ b/pf0670/revisao.html
@@ -3,9 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Manipulação de arrays</title>
+
+    <script src="./js/script.js"></script>
+
 </head>
 <body>
     
+    <h1>Exemplos de Arrays e seu métodos</h1>
+
 </body>
 </html>
