Lista criada, Listener do btnAddTarefa criado-ok.

--- a/pf0670/index.html
+++ b/pf0670/index.html
@@ -18,7 +18,7 @@
             <fieldset>
                 <legend>Cadastro de Tarefas</legend>
                 <div>
-                    <label for="">Nova Tarefa</label>
+                    <label for="idTarefa">Nova Tarefa</label>
                     <input type="text" name="tarefa" id="idTarefa" placeholder="Digite o nome de sua Tarefa">
                 </div>
                 <div>
