Fazendo acompanhando o inicio do array

--- a/rm550687/index.html
+++ b/rm550687/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coded By PF0670</title>
-    <script src="../js/tarefas.js"></script>
-
+    <!-- JS -->
+        <script src="../js/tarefas.js" defer></script>
+    <!-- JS -->
+    
 </head>
 <body>
 
@@ -16,7 +18,7 @@
             <fieldset>
                 <legend>Cadastro de Tarefas</legend>
                 <div>
-                    <label for="">Nova Tarefa</label>
+                    <label for="idTarefa">Nova Tarefa</label>
                     <input type="text" name="tarefa" id="idTarefa" placeholder="Digite o nome de sua Tarefa">
                 </div>
                 <div>
