--- a/rm550620/index.html
+++ b/rm550620/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coded By rm 550620 Kalel</title>
-    <script src="./js/tarefas.js" defer></script>
+    <script src="../js/tarefas.js" defer></script>
 
 
 </head>
