--- a/rm550620/index.html
+++ b/rm550620/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Coded By rm 550620 Kalel</title>
-    <script src="../js/tarefas.js" defer></script>
-
-
+    <title>Coded By PF0670</title>
+    <!-- JS -->
+        <script src="./js/tarefas.js" defer></script>
+    <!-- JS -->
+    
 </head>
 <body>
 
@@ -17,9 +18,8 @@
             <fieldset>
                 <legend>Cadastro de Tarefas</legend>
                 <div>
-                    <label for="">Nova Tarefa</label>
-                    <input type="text" name="tarefa" id="idTarefa" placeholder="Digite o nome da sua nova tarefa"
-                    
+                    <label for="idTarefa">Nova Tarefa</label>
+                    <input type="text" name="tarefa" id="idTarefa" placeholder="Digite o nome de sua Tarefa">
                 </div>
                 <div>
                     <button type="submit" id="btnAddTarefa">Adicionar</button>
@@ -28,6 +28,11 @@
         </form>
     </div>
 
+    <div>
+        <ul id="lista-tarefas">
+
+        </ul>
+    </div>
 
 </body>
 </html>
