--- a/pf0670/index.html
+++ b/pf0670/index.html
@@ -9,9 +9,12 @@
 
 </head>
 <body>
+
+    <h2>Lista de Tarefas</h2>
     <div>
     <form action="#" method="get">
-        <fieldset>Cadastro</fieldset>
+        <fieldset>
+            <legend>Cadastro</legend>
         <div>
             <label for="">New task</label>
             <input type="text" name="tarefa" id="idTarefa"
@@ -20,6 +23,7 @@
         <div>
             <button type="submit" id="btnAddTarefa">Add</button>
         </div>
+    </fieldset>
     </form>
     </div>
     <div>
