--- a/cp1/index.html
+++ b/cp1/index.html
@@ -9,7 +9,10 @@
 </head>
 <body>
     <h1>Lista de tarefas</h1>
-    <form id="listaFormulario" method="POST">
+    <div>
+        <form action="#" method="get">
+    </div>
+    <div>
         <label for="listaDescricao">Descrição:</label>
         <input id="listaDescricao" name="Descricao" type="text">
 
@@ -21,9 +24,18 @@
 
         <label for="listaImportancia">Importancia:</label>
         <input id="listaImportancia" name="importancia" type="text">
-    </form>
-
+    </div>
+    <div>
     <button type="submit" id="btnAddTarefa">Adicionar tarefa</button>
-    
+    </div>
+</form>
+</div>
+<div>
+    <table>
+        <tr>
+            <td></td>
+        </tr>
+    </table>
+</div>
 </body>
 </html>
