--- a/checkpoint1/index.html
+++ b/checkpoint1/index.html
@@ -23,6 +23,8 @@
                     <input type="text" name="autor" id="idAutor" placeholder="Digite o autor">
                     <input type="text" name="departamento" id="idDepartamento" placeholder="Digite o departamento">
                     <input type="text" name="importancia" id="idImportancia" placeholder="Digite a importancia">
+                    <input type="text" name="valor" id="idValor" placeholder="Digite o valor">
+                    <input type="text" name="duracao" id="idDuracao" placeholder="Digite a duracao">
                 </div>
                 <div>
                     <button type="submit" id="btnAddTarefa">Adicionar</button>
