--- a/checkpoint1/index.html
+++ b/checkpoint1/index.html
@@ -47,7 +47,9 @@
     </div>
     <div>
         <h3>Organização por importancia.</h3>
-        <ul id="tarefasPorImportancia"></ul>
+        <ul id="tarefasPorImportancia">
+            
+        </ul>
     </div>
 
 </body>
