--- a/checkpoint1/index.html
+++ b/checkpoint1/index.html
@@ -27,9 +27,9 @@
                     <label>Importancia:</label>
                     <input type="number" name="importancia" id="idImportancia" placeholder="Digite a importancia">
                     <label>Valor:</label>
-                    <input type="number" name="valor" id="idValor" placeholder="Digite o valor">
+                    <input type="number" name="valor" id="idValor" placeholder="Digite o valor (opicional)">
                     <label>Duracao:</label>
-                    <input type="text" name="duracao" id="idDuracao" placeholder="Digite a duracao">
+                    <input type="text" name="duracao" id="idDuracao" placeholder="Digite a duracao (opicional)">
                 </div>
                 <div>
                     <button type="submit" id="btnAddTarefa">Adicionar</button>
@@ -48,7 +48,7 @@
     <div>
         <h3>Organização por importancia.</h3>
         <ul id="tarefasPorImportancia">
-            
+
         </ul>
     </div>
 
