--- a/cp1/index.html
+++ b/cp1/index.html
@@ -9,18 +9,20 @@
 <body>
   <h1>Lista de Tarefas</h1>
   
-  <div>
-    <label for="descricao">Descrição:</label>
-        <input type="text" id="descricao" placeholder="Digite a descrição...">
-    <label for="autor">Autor:</label>
-        <input type="text" id="autor" placeholder="Digite o nome do autor...">
-    <label for="departamento">Departamento:</label>
-        <input type="text" id="departamento" placeholder="Digite o departamento...">
-    <label for="importancia">Importância:</label>
-        <input type="number" id="importancia" placeholder="Digite o nível de importância...">
-    <button onclick="adicionarTarefa()">Adicionar Tarefa</button>
-  </div>
-  
+  <form action="">
+    <div>
+      <label for="descricao">Descrição:</label>
+      <input type="text" id="descricao" placeholder="Digite a descrição...">
+      <label for="autor">Autor:</label>
+      <input type="text" id="autor" placeholder="Digite o nome do autor...">
+      <label for="departamento">Departamento:</label>
+      <input type="text" id="departamento" placeholder="Digite o departamento...">
+      <label for="importancia">Importância:</label>
+      <input type="number" id="importancia" placeholder="Digite o nível de importância...">
+      <button onclick="adicionarTarefa()">Adicionar Tarefa</button>
+    </div>
+  </form>
+    
   <table id="tabela">
     <thead>
       <tr>
