--- a/cp1/index.html
+++ b/cp1/index.html
@@ -24,20 +24,12 @@
         <label for="importancia">Importancia:</label>
         <input id="listaImportancia" name="importancia" type="text">
 
-        <button onclick="adicionarTarefa()">Adicionar tarefa</button>
+        <button id="btnAddTarefa" onclick="adicionarTarefa()">Adicionar tarefa</button>
         </form>
     </div>
 <div>
     <h2>Ordem de importância.</h2>
     <ul id="listaDeImportancia"></ul>
 </div>
-<table id="tabela">
-    <tr>
-        <td>Descrição</td>
-        <td>Autor</td>
-        <td>Departamento</td>
-        <td>Importancia</td>
-    </tr>
-</table>
 </body>
 </html>
